# schedule-reminder

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-build.yml
src/schedule_reminder/: __init__.py  event.py  main.py  reminder_service.py  telegram_notifier.py
