[project]
name = "schedule-reminder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "adam", email = "alucardxh@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.8",
    "pyyaml>=6.0.3",
]

[project.scripts]
schedule-reminder = "schedule_reminder:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
